@@ -25,6 +25,7 @@
        dialog. See issue #150. (Stefan)
 - NEW: Diffing of properties. See issue #133. (Stefan)
 - NEW: 'Open' and 'Open with...' commands in the progress dialog. (Stefan)
+- NEW: Showing the log messages between two tags. See issue #111. (Stefan)
 - CHG: Setup UI changed from the dark'd code from the VS-generated package
        to a standardised framework from the WiX tutorial. 
        See issue #147. (Pete)
